@@ -1,3 +1,5 @@
+12.aug (ws)
+      - navigator preview is now calculated in background task
 11.aug (ws)
       - fix #12049: Page count change causes crash
       - fix #12051: Score must be clicked or moved to see pages in navigator
